--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3auth/base": "^7.2.0",
+    "@web3auth/base-provider": "^7.2.0",
+    "@web3auth/ethereum-provider": "^7.2.0",
+    "@web3auth/no-modal": "^7.2.0",
+    "@web3auth/openlogin-adapter": "^7.2.0",
+    "@web3auth/solana-provider": "^7.2.0",
     "autoprefixer": "10.4.14",
     "next": "13.4.12",
     "postcss": "8.4.27",
