--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
-    "framer-motion": "^10.16.16",
-    "next": "13.1.1",
     "@web3auth/base": "^7.2.0",
     "@web3auth/base-provider": "^7.2.0",
     "@web3auth/ethereum-provider": "^7.2.0",
@@ -19,8 +17,13 @@
     "@web3auth/openlogin-adapter": "^7.2.0",
     "@web3auth/solana-provider": "^7.2.0",
     "autoprefixer": "10.4.14",
+    "framer-motion": "^10.16.16",
+    "next": "13.1.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.6"
   }
 }
