--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "13.1.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.6"
