--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_CLIENT_ID=""
-NEXT_PUBLIC_RPC_TARGET=""
-NEXT_PUBLIC_AUTH_NETWORK=""
+NEXT_PUBLIC_CLIENT_ID="BFvKdutTFewcChqSmNL_VV4-EO3_6yftUG9q9i6KmTHmKWeZgPuLmsvwgA0LZlD-vmYX6Uon_sO_z0i73kPcKDc"
+NEXT_PUBLIC_RPC_TARGET="https://rpc.ankr.com/eth"
+NEXT_PUBLIC_AUTH_NETWORK="sapphire_devnet"
