--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@web3auth/no-modal": "^7.2.0",
     "@web3auth/openlogin-adapter": "^7.2.0",
     "@web3auth/solana-provider": "^7.2.0",
-    "autoprefixer": "10.4.14",
     "framer-motion": "^10.16.16",
     "next": "13.1.1",
-    "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "autoprefixer": "10.4.13",
+    "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
   }
 }
