--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "11.0.3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
