--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "11.0.3",
-    "zustand": "^4.4.7"
+    "swiper": "11.0.3"
   },
   "devDependencies": {
     "autoprefixer": "10.4.13",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "zustand": "^4.4.7"
   }
 }
