--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@tanstack/react-query": "^5.29.2",
     "@web3auth/base": "^7.2.0",
     "@web3auth/base-provider": "^7.2.0",
     "@web3auth/ethereum-provider": "^7.2.0",
     "@web3auth/no-modal": "^7.2.0",
     "@web3auth/openlogin-adapter": "^7.2.0",
     "@web3auth/solana-provider": "^7.2.0",
+    "connectkit": "^1.7.3",
     "framer-motion": "^10.16.16",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "11.0.3"
+    "swiper": "11.0.3",
+    "viem": "^2.9.16",
+    "wagmi": "^2.5.19"
   },
   "devDependencies": {
     "autoprefixer": "10.4.13",
