--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connectkit": "^1.7.3",
     "framer-motion": "^10.16.16",
     "next": "13.4.1",
+    "openai": "^4.38.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "11.0.3",
