--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "autoprefixer": "10.4.13",
+    "daisyui": "^4.10.2",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "zustand": "^4.4.7"
